syntax = "proto3";

option go_package = "./;msq";

import "google/protobuf/empty.proto";

service MessageBroker {
  rpc Publish(Message) returns (Response);
  rpc Subscribe(SubscriptionRequest) returns (stream Message);
  rpc ListTopics(google.protobuf.Empty) returns (ListTopicsReply);
}

message Message {
  string topic = 1;
  string payload = 2;
}

message SubscriptionRequest {
  string topic = 1;
}

message Response {
  bool success = 1;
}

message TopicInfo {
  string topic = 1;
  int32 subscriber_count = 2;
}

message ListTopicsReply {
  repeated TopicInfo topics = 1;
}
